# neuromod-py

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/neuromod/: __init__.py  config.py
src/neuromod/agents/: README.md  __init__.py  agent.py  types.py
src/neuromod/composition/: README.md  __init__.py  compose.py  context.py  helpers.py  model.py  scope.py  thread.py
src/neuromod/messages/: README.md  __init__.py  helpers.py  types.py
src/neuromod/models/: README.md  __init__.py  anthropic.py  google.py  model.py  ollama.py  openai.py  xai.py
src/neuromod/providers/: README.md  __init__.py  anthropic.py  errors.py  factory.py  google.py  ollama.py  openai.py  provider.py
src/neuromod/streaming/: README.md  __init__.py  events.py
src/neuromod/tools/: README.md  __init__.py  tool.py
tests/: conftest.py  test_agent.py  test_anthropic_provider.py  test_composition.py  test_config.py  test_context.py  test_google_provider.py  test_integration.py  test_messages.py  test_model.py  test_models.py  test_ollama_provider.py  test_providers.py  test_scope.py  test_streaming.py  test_threads.py  test_tools.py
