[project]
name = "neuromod"
version = "0.1.4"
description = "A composable framework for building AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Patrick Suijk", email = "psuijk@users.noreply.github.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/psuijk/neuromod-py"
Repository = "https://github.com/psuijk/neuromod-py"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neuromod"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
markers = [
    "integration: tests that make real API calls (may be slow, require API keys)",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
